--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -73,7 +73,9 @@ body {
   }
 
   &:focus {
-    border: 20px solid transparent;
+    // border: 20px solid transparent;
+    border-style: solid;
+    border-width: 20px;
     border-image: url(../img/input.svg);
     border-image-slice: 20;
     padding: 0 22px;
